# sage-flatsurf

./: .gitignore  .pylintrc  .travis.yml  .zenodo.json  3413-differentials.ipynb  ChangeLog  MANIFEST.in  README.md  README.rst  alphabet_with_inverses.py  asv.conf.json  asv.environment.yml  benchmarks.json  create_similarity_surface_bundle.py  edge_gluings.py  editor_actor.py  editor_renderer.py  environment.yml  finitely_generated_matrix_group.py  flatsurf.yml  matrix_2x2.py  mega_wollmilchsau.py  mpreal-support.h  mpreal.h  notes_on_number_fields  patdemo.py  pattest.py  polygon.py  pyproject.toml  rever.xsh  setup.py  similarity_surface.py  similarity_surface_bundle.py  similarity_surface_generators.py  surface_bundle.py  surface_edge_labeler.py  surface_manipulator.py  surface_manipulator_launcher.py  surface_point.py  surface_positioner.py  (+2 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: benchmark.yml  cancel.yml  conda.yml  doc.yml  installer.yml  lint.yml  netlify.yml  test.yml
Azure/: 0090d3e6-env-532d0b9c2655a14e2e20c098961d828e.json  0328b0bc-conda-py3.11.json  04dd0992-conda-py3.9-wheel.json  05194f5f-env-b672e9e9e9075039718e1a1cc8584aa9.json  0ac4e152-env-532d0b9c2655a14e2e20c098961d828e.json  0d8928d4-conda-py3.11.json  0efe7565-env-532d0b9c2655a14e2e20c098961d828e.json  0f245272-env-532d0b9c2655a14e2e20c098961d828e.json  0fce1c5d-env-77311f6bc5744e86c0eac407113578dd.json  10612dbd-conda-py3.9-wheel.json  164d306b-conda-py3.9-wheel.json  180ffb42-env-532d0b9c2655a14e2e20c098961d828e.json  187ab094-env-532d0b9c2655a14e2e20c098961d828e.json  187ddb40-env-532d0b9c2655a14e2e20c098961d828e.json  1a11d1f8-conda-py3.11.json  1b25b9f5-env-532d0b9c2655a14e2e20c098961d828e.json  1bab8856-env-532d0b9c2655a14e2e20c098961d828e.json  1ebfa1cf-conda-py3.11.json  1fb2562a-env-b672e9e9e9075039718e1a1cc8584aa9.json  1fe4fea5-conda-py3.12.json  2055207d-env-532d0b9c2655a14e2e20c098961d828e.json  2056cc5e-conda-py3.11.json  22bd1c57-env-532d0b9c2655a14e2e20c098961d828e.json  22c29653-env-532d0b9c2655a14e2e20c098961d828e.json  23f48fbe-env-b672e9e9e9075039718e1a1cc8584aa9.json  271847a7-env-5490e2844d8edde89c2cacb86e31191d.json  272f46c2-conda-py3.11.json  27ea7d4b-env-b672e9e9e9075039718e1a1cc8584aa9.json  2d56268a-env-532d0b9c2655a14e2e20c098961d828e.json  2e8edd34-env-77311f6bc5744e86c0eac407113578dd.json  2f6e68b7-env-532d0b9c2655a14e2e20c098961d828e.json  31959903-conda-py3.9-wheel.json  32c2b490-env-77311f6bc5744e86c0eac407113578dd.json  345e2199-env-77311f6bc5744e86c0eac407113578dd.json  366c1c51-env-532d0b9c2655a14e2e20c098961d828e.json  37ee1322-env-532d0b9c2655a14e2e20c098961d828e.json  3b19d994-env-5490e2844d8edde89c2cacb86e31191d.json  4046b7ad-conda-py3.11.json  4310201a-env-532d0b9c2655a14e2e20c098961d828e.json  45eab773-env-77311f6bc5744e86c0eac407113578dd.json  (+77 more)
benchmark/: README.md  polygons.py
benchmark/aulicino/: 202106.py
benchmark/geometry/: harmonic_differentials.py  hyperbolic.py  polygon.py
binder/: environment.yml
demo/: mega_wollmilchsau_plotter.py
doc/: Makefile  apisa_wright_example.rst  cache.rst  conf.py  developer.rst  environment.yml  examples.rst  features.rst  geometry.rst  graphical.rst  index.rst  install.rst  jupyter_doctest_tweaks.py  walk_through.rst
doc/examples/: .gitignore  apisa_wright.md  boshernitzan_conjecture.md  defining_surfaces.md  environment.yml  graphics_configuration.md  harmonic.md  linear_action_and_delaunay.md  monotile.md  rel_deformations.md  saddle_connections.md  siegel_veech.md  straight_line_flow.md  tour.md  warwick-2017.md
doc/geometry/: categories.rst  chamanara.rst  circle.rst  cohomology.rst  cone_surface.rst  cone_surfaces.rst  delaunay.rst  dilation_surface.rst  dilation_surfaces.rst  euclidean.rst  euclidean_polygonal_surfaces.rst  euclidean_polygons.rst  euclidean_polygons_with_angles.rst  finitely_generated_matrix_group.rst  fundamental_group.rst  mappings.rst  (+41 more)
docs/: .buildinfo  cache.html  developer.html  examples.html  features.html  genindex.html  geometry.html  graphical.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  walk_through.html
examples/: defining_surfaces.html  defining_surfaces.ipynb  graphics_configuration.ipynb  linear_action_and_delaunay.html  linear_action_and_delaunay.ipynb  rel_deformations.html  rel_deformations.ipynb  saddle_connections.html  saddle_connections.ipynb  siegel_veech.ipynb  straight_line_flow.html  straight_line_flow.ipynb  warwick-2017.html  warwick-2017.ipynb
flatsurf/: __init__.py  cache.py  environment.extra.yml  environment.yml  features.py  version.py
geometry/: matrix_2x2.py  polygon.py  relative_homology.py  similarity.py  similarity_surface.py  similarity_surface_generators.py  straight_line_trajectory.py  tangent_bundle.py  translation.py
graphical/: __init__.py  polygon.py  straight_line_plotter.py  straight_line_trajectory.py  surface.py
manual/: genindex.html  index.html  objects.inv  search.html  searchindex.js
pack/: flatsurf.run  unpack.sh
recipe/: meta.yaml
test/: pyflatsurf_conversion.py  run_tests.py  test_nothing.py  test_pyflatsurf_conversion.py
unused/: alphabet_with_inverses.py  create_similarity_surface_bundle.py  edge_gluings.py  editor_actor.py  mega_wollmilchsau_plotter.py  patdemo.py  pattest.py  similarity_surface_bundle.py  similarity_surface_plot.py  surface_bundle.py  surface_positioner.py  surface_type.py  translation_surface_editor.py
(+485 files in other folders)
